istio1.5/envoy-recv0.json
{
  "node": {
    "id": "sidecar~172.16.0.83~productpage-v1-cb7c95d85-9c45f.default~default.svc.cluster.local",
    "cluster": "productpage.default",
    "locality": {
      
      
      
    },
    "metadata": {"CLUSTER_ID":"Kubernetes","CONFIG_NAMESPACE":"default","EXCHANGE_KEYS":"NAME,NAMESPACE,INSTANCE_IPS,LABELS,OWNER,PLATFORM_METADATA,WORKLOAD_NAME,CANONICAL_TELEMETRY_SERVICE,MESH_ID,SERVICE_ACCOUNT","INSTANCE_IPS":"172.16.0.83","INTERCEPTION_MODE":"REDIRECT","ISTIO_PROXY_SHA":"istio-proxy:73f240a29bece92a8882a36893ccce07b4a54664","ISTIO_VERSION":"1.5.0","LABELS":{"app":"productpage","pod-template-hash":"cb7c95d85","security.istio.io/tlsMode":"istio","service.istio.io/canonical-na [...]
  },
  "stats_config": {
    "use_all_default_tags": false,
    "stats_tags": [
      {
        "tag_name": "cluster_name",
        "regex": "^cluster\\.((.+?(\\..+?\\.svc\\.cluster\\.local)?)\\.)"
      },
      {
        "tag_name": "tcp_prefix",
        "regex": "^tcp\\.((.*?)\\.)\\w+?$"
      },
      {
          "regex": "(response_code=\\.=(.+?);\\.;)|_rq(_(\\.d{3}))$",
          "tag_name": "response_code"
      },
      {
        "tag_name": "response_code_class",
        "regex": "_rq(_(\\dxx))$"
      },
      {
        "tag_name": "http_conn_manager_listener_prefix",
        "regex": "^listener(?=\\.).*?\\.http\\.(((?:[_.[:digit:]]*|[_\\[\\]aAbBcCdDeEfF[:digit:]]*))\\.)"
      },
      {
        "tag_name": "http_conn_manager_prefix",
        "regex": "^http\\.(((?:[_.[:digit:]]*|[_\\[\\]aAbBcCdDeEfF[:digit:]]*))\\.)"
      },
      {
        "tag_name": "listener_address",
        "regex": "^listener\\.(((?:[_.[:digit:]]*|[_\\[\\]aAbBcCdDeEfF[:digit:]]*))\\.)"
      },
      {
        "tag_name": "mongo_prefix",
        "regex": "^mongo\\.(.+?)\\.(collection|cmd|cx_|op_|delays_|decoding_)(.*?)$"
      },
      {
          "regex": "(reporter=\\.=(.+?);\\.;)",
          "tag_name": "reporter"
      },
      {
          "regex": "(source_namespace=\\.=(.+?);\\.;)",
          "tag_name": "source_namespace"
      },
      {
          "regex": "(source_workload=\\.=(.+?);\\.;)",
          "tag_name": "source_workload"
      },
      {
          "regex": "(source_workload_namespace=\\.=(.+?);\\.;)",
          "tag_name": "source_workload_namespace"
      },
      {
          "regex": "(source_principal=\\.=(.+?);\\.;)",
          "tag_name": "source_principal"
      },
      {
          "regex": "(source_app=\\.=(.+?);\\.;)",
          "tag_name": "source_app"
      },
      {
          "regex": "(source_version=\\.=(.+?);\\.;)",
          "tag_name": "source_version"
      },
      {
          "regex": "(destination_namespace=\\.=(.+?);\\.;)",
          "tag_name": "destination_namespace"
      },
      {
          "regex": "(destination_workload=\\.=(.+?);\\.;)",
          "tag_name": "destination_workload"
      },
      {
          "regex": "(destination_workload_namespace=\\.=(.+?);\\.;)",
          "tag_name": "destination_workload_namespace"
      },
      {
          "regex": "(destination_principal=\\.=(.+?);\\.;)",
          "tag_name": "destination_principal"
      },
      {
          "regex": "(destination_app=\\.=(.+?);\\.;)",
          "tag_name": "destination_app"
      },
      {
          "regex": "(destination_version=\\.=(.+?);\\.;)",
          "tag_name": "destination_version"
      },
      {
          "regex": "(destination_service=\\.=(.+?);\\.;)",
          "tag_name": "destination_service"
      },
      {
          "regex": "(destination_service_name=\\.=(.+?);\\.;)",
          "tag_name": "destination_service_name"
      },
      {
          "regex": "(destination_service_namespace=\\.=(.+?);\\.;)",
          "tag_name": "destination_service_namespace"
      },
      {
          "regex": "(request_protocol=\\.=(.+?);\\.;)",
          "tag_name": "request_protocol"
      },
      {
          "regex": "(response_flags=\\.=(.+?);\\.;)",
          "tag_name": "response_flags"
      },
      {
          "regex": "(grpc_response_status=\\.=(.*?);\\.;)",
          "tag_name": "grpc_response_status"
      },
      {
          "regex": "(connection_security_policy=\\.=(.+?);\\.;)",
          "tag_name": "connection_security_policy"
      },
      {
          "regex": "(permissive_response_code=\\.=(.+?);\\.;)",
          "tag_name": "permissive_response_code"
      },
      {
          "regex": "(permissive_response_policyid=\\.=(.+?);\\.;)",
          "tag_name": "permissive_response_policyid"
      },
      {
          "regex": "(cache\\.(.+?)\\.)",
          "tag_name": "cache"
      },
      {
          "regex": "(component\\.(.+?)\\.)",
          "tag_name": "component"
      },
      {
          "regex": "(tag\\.(.+?)\\.)",
          "tag_name": "tag"
      },
      {
          "regex": "(source_canonical_service=\\.=(.+?);\\.;)",
          "tag_name": "source_canonical_service"
      },
      {
          "regex": "(destination_canonical_service=\\.=(.+?);\\.;)",
          "tag_name": "destination_canonical_service"
      },
      {
          "regex": "(source_canonical_revision=\\.=(.+?);\\.;)",
          "tag_name": "source_canonical_revision"
      },
      {
          "regex": "(destination_canonical_revision=\\.=(.+?);\\.;)",
          "tag_name": "destination_canonical_revision"
      }
    ],
    "stats_matcher": {
      "inclusion_list": {
        "patterns": [
          {
          "prefix": "reporter="
          },
          {
          "prefix": "component"
          },
          {
          "prefix": "cluster_manager"
          },
          {
          "prefix": "listener_manager"
          },
          {
          "prefix": "http_mixer_filter"
          },
          {
          "prefix": "tcp_mixer_filter"
          },
          {
          "prefix": "server"
          },
          {
          "prefix": "cluster.xds-grpc"
          },
          {
          "suffix": "ssl_context_update_by_sds"
          },
        ]
      }
    }
  },
  "admin": {
    "access_log_path": "/dev/null",
    "address": {
      "socket_address": {
        "address": "127.0.0.1",
        "port_value": 15000
      }
    }
  },
  "dynamic_resources": {
    "lds_config": {
      "ads": {}
    },
    "cds_config": {
      "ads": {}
    },
    "ads_config": {
      "api_type": "GRPC",
      "grpc_services": [
        {
          "envoy_grpc": {
            "cluster_name": "xds-grpc"
          }
        }
      ]
    }
  },
  "static_resources": {
    "clusters": [
      {
        "name": "prometheus_stats",
        "type": "STATIC",
        "connect_timeout": "0.250s",
        "lb_policy": "ROUND_ROBIN",
        "hosts": [
          {
            "socket_address": {
              "protocol": "TCP",
              "address": "127.0.0.1",
              "port_value": 15000
            }
          }
        ]
      },
      {
        "name": "sds-grpc",
        "type": "STATIC",
        "http2_protocol_options": {},
        "connect_timeout": "10s",
        "lb_policy": "ROUND_ROBIN",
        "hosts": [{
          "pipe": {
            "path": "/etc/istio/proxy/SDS"
           }
        }]
      },
      {
        "name": "xds-grpc",
        "type": "STRICT_DNS",
        "dns_refresh_rate": "300s",
        "dns_lookup_family": "V4_ONLY",
        "connect_timeout": "10s",
        "lb_policy": "ROUND_ROBIN",
        
        
        "tls_context": {
          "common_tls_context": {
            "alpn_protocols": [
              "h2"
            ],
            
             "tls_certificate_sds_secret_configs":[
              {
                "name":"default",
                "sds_config":{
                  "api_config_source":{
                    "api_type":"GRPC",
                    "grpc_services":[
                      {
                        "envoy_grpc":{
                          "cluster_name": "sds-grpc"
                        }
                      }
                    ]
                  }
                }
              }
            ],
            "validation_context": {
              "trusted_ca": {
                
                "filename": "./var/run/secrets/istio/root-cert.pem"
                
              },
              "verify_subject_alt_name": ["istiod.istio-system.svc"]
            }
            
          },
        },
        
        
        "hosts": [
          {
            "socket_address": {"address": "istiod.istio-system.svc", "port_value": 15012}
          }
        ],
        "circuit_breakers": {
          "thresholds": [
            {
              "priority": "DEFAULT",
              "max_connections": 100000,
              "max_pending_requests": 100000,
              "max_requests": 100000
            },
            {
              "priority": "HIGH",
              "max_connections": 100000,
              "max_pending_requests": 100000,
              "max_requests": 100000
            }
          ]
        },
        "upstream_connection_options": {
          "tcp_keepalive": {
            "keepalive_time": 300
          }
        },
        "max_requests_per_connection": 1,
        "http2_protocol_options": { }
      }
      
      ,
      {
        "name": "zipkin",
        "type": "STRICT_DNS",
        "dns_refresh_rate": "300s",
        "dns_lookup_family": "V4_ONLY",
        "connect_timeout": "1s",
        "lb_policy": "ROUND_ROBIN",
        "hosts": [
          {
            "socket_address": {"address": "zipkin.istio-system", "port_value": 9411}
          }
        ]
      }
      
      
      
    ],
    "listeners":[
      {
        "address": {
          "socket_address": {
            "protocol": "TCP",
            "address": "0.0.0.0",
            "port_value": 15090
          }
        },
        "filter_chains": [
          {
            "filters": [
              {
                "name": "envoy.http_connection_manager",
                "config": {
                  "codec_type": "AUTO",
                  "stat_prefix": "stats",
                  "route_config": {
                    "virtual_hosts": [
                      {
                        "name": "backend",
                        "domains": [
                          "*"
                        ],
                        "routes": [
                          {
                            "match": {
                              "prefix": "/stats/prometheus"
                            },
                            "route": {
                              "cluster": "prometheus_stats"
                            }
                          }
                        ]
                      }
                    ]
                  },
                  "http_filters": {
                    "name": "envoy.router"
                  }
                }
              }
            ]
          }
        ]
      }
    ]
  }
  
  ,
  "tracing": {
    "http": {
      "name": "envoy.zipkin",
      "config": {
        "collector_cluster": "zipkin",
        "collector_endpoint": "/api/v2/spans",
        "collector_endpoint_version": "HTTP_JSON",
        "trace_id_128bit": "true",
        "shared_span_context": "false"
      }
    }
  }
  
  
  
}
